[package]
name = "asyncdata"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "asyncdata"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
async-trait = "0.1"
